--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -44,6 +44,7 @@
     }
   ],
   "notification_subscribers": [],
+  "xref_endpoint": "https://xref.docs.microsoft.com",
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
   "dependent_repositories": [
